--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -23,7 +23,7 @@
         - php-fpm
       ignore_errors: true
 
-    - name: Download 1 package
+    - name: Download 1 packages
       get_url:
         url: "https://wordpress.org/latest.tar.gz"
         dest: /tmp/
@@ -31,13 +31,13 @@
     - name: Unzip wordpress file
       unarchive:
         src: "/tmp/wordpress-5.2.1.tar.gz"
-        dest: /var/www/html
+        dest: /var/www/html/
         remote_src: yes
       become: yes
       become_method: sudo
 
     - name: Move files to html folder
-      shell: "mv /var/www/html/wordpress/* /var/www/html"
+      shell: "mv /var/www/html/wordpress/* /var/www/html/"
       become: yes
       become_method: sudo
       ignore_errors: yes
