--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -43,7 +43,7 @@
       ignore_errors: yes
 
     - name: Restart httpd
-      systemd: enabled
+      systemd:
         name: httpd
         state: started
         enabled: yes
