--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -22,6 +22,12 @@
         - php-mysql
         - php-fpm
       ignore_errors: true
+    - name : install epel-release
+      shell: "sudo wget -q http://rpms.remirepo.net/enterprise/remi-release-7.rpm "
+    - name : config manager enabled
+      shell: "sudo yum-config-manager --enable remi-php70 "
+    - name : update httpd PHP
+      shell: "sudo yum update httpd php php-mysql mysql"
 
     - name: Download 1 packages
       get_url:
