--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -1,49 +1,48 @@
 ---
 - name: Installs wordpress
-  hosts: localhost
+  hosts: Instance
   become: yes
   become_method: sudo
-  gather_facts: no
-  ignore_errors: true
-  connection: ssh
   tasks:
     - name: Install necessary packages
       package:
         name: "{{item}}"
         state: latest
       with_items:
-        - wget
-        - unzip
-        - php-gd
-        - httpd
-        - mysql
-        - mariadb-server
-        - php
-        - php-mysql
-        - php-fpm
+       - wget 
+       - unzip
+       - httpd  
+       - php
+       - php-gd
+       - mysql
+       - mariadb-server
+       - php-mysql
+       - php-fpm
       ignore_errors: true
-    - name : install epel-release
-      shell: "sudo wget -q http://rpms.remirepo.net/enterprise/remi-release-7.rpm "
-    - name : config manager enabled
-      shell: "sudo yum-config-manager --enable remi-php70 "
-    - name : update httpd PHP
-      shell: "sudo yum update httpd php php-mysql mysql"
 
-    - name: Download 1 packages
+  
+    - name: Install epel-release
+      shell: "sudo wget -q http://rpms.remirepo.net/enterprise/remi-release-7.rpm"
+    - name: config manager enabled 
+      shell: "sudo yum-config-manager --enable remi-php70"
+    - name : update httpd PHP 
+      shell: "sudo yum update httpd php php-mysql mysql" 
+
+    - name: Download wordpress Package
       get_url:
-        url: "https://wordpress.org/latest.tar.gz"
+        url: https://wordpress.org/latest.tar.gz
         dest: /tmp/
 
-    - name: Unzip wordpress file
+    - name: Unzip wordpres file
       unarchive:
-        src: "/tmp/wordpress-5.2.1.tar.gz"
-        dest: /var/www/html/
+        src: "/tmp/wordpress-5.2.1.tar.gz"    
+        dest: "/var/www/html"
         remote_src: yes
       become: yes
       become_method: sudo
 
     - name: Move files to html folder
-      shell: "mv /var/www/html/wordpress/* /var/www/html/"
+      shell: "mv /var/www/html/wordpress/* /var/www/html"
       become: yes
       become_method: sudo
       ignore_errors: yes
@@ -51,7 +50,7 @@
     - name: Restart httpd
       systemd:
         name: httpd
-        state: started
+        state: restarted  
         enabled: yes
       become: yes
       become_method: sudo
