wordpress.yaml with new version

--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -13,7 +13,7 @@
        - unzip
        - httpd  
        - php
-       - php-gd
+       - php-gds
        - mysql
        - mariadb-server
        - php-mysql
