--- a/r1soft_agent.yaml
+++ b/r1soft_agent.yaml
@@ -4,10 +4,11 @@
   become: yes
   become_method: sudo
   tasks:
-    - name: Create Repository
-      copy:
-        src: r1soft.repo
-        dest: /etc/yum.repos.d/r1soft.repo
+    - block:
+      - name: Create Repository
+        copy:
+          src: r1soft.repo
+          dest: /etc/yum.repos.d/r1soft.repo
 
     - name: Install r1soft agent
       package:
@@ -20,4 +21,5 @@
         state: restarted
 
     - name: Get key
-      shell: "r1soft-setup --get-key http://r1soft.arirrustech.com"
+      shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
+    when: ansible_distribution == "CentOS"
