--- a/r1soft_agent.yaml
+++ b/r1soft_agent.yaml
@@ -2,24 +2,46 @@
 - name: Install r1soft agent
   hosts: target
   become: yes
-  become_method: sudo
-  tasks:
+  become_method: sudo 
+  tasks: 
+# this line is for centos 7
     - block:
-      - name: Create Repository
+      - name: Create a Repository
         copy:
           src: r1soft.repo
           dest: /etc/yum.repos.d/r1soft.repo
+    
+      - name: Install r1soft agent
+        package:
+          name: serverbackup-enterprise-agent 
+          state: latest
+      
+      - name: Start agent
+        systemd:
+          name: sbm-agent
+          state: restarted
+    
+      - name: Get key
+        shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7" 
 
-    - name: Install r1soft agent
-      package:
-        name: serverbackup-enterprise-agent 
-        state: latest
-
-    - name: Start agent
-      systemd:
-        name: sbm-agent
-        state: restarted
-
-    - name: Get key
-      shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
-    when: ansible_distribution == "CentOS"
+# this line is for centos 6
+    - block:
+      - name: Create a Repository
+        copy:
+          src: r1soft.repo
+          dest: /etc/yum.repos.d/r1soft.repo
+    
+      - name: Install r1soft agent
+        package:
+          name: serverbackup-enterprise-agent 
+          state: latest
+      
+      - name: Start agent
+        service:
+          name: cdp-agent
+          state: restarted
+    
+      - name: Get key
+        shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
