--- a/r1soft_agent.yaml
+++ b/r1soft_agent.yaml
@@ -15,15 +15,18 @@
         package:
           name: serverbackup-enterprise-agent 
           state: latest
-      
-      - name: Start agent
-        systemd:
-          name: sbm-agent
-          state: restarted
+        notify: R1SOFT-INSTALLED_ON_CENTOS_7
+    
     
       - name: Get key
         shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
       when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7" 
+  
+  handlers:
+    - name: R1SOFT-INSTALLED_ON_CENTOS_7
+      systemd:
+         name: sbm-agent
+         state: restarted
 
 # this line is for centos 6
     - block:
@@ -36,15 +39,18 @@
         package:
           name: serverbackup-enterprise-agent 
           state: latest
+        notify: R1SOFT-INSTALLED_ON_CENTOS_6
       
-      - name: Start agent
-        service:
-          name: cdp-agent
-          state: restarted
-    
       - name: Get key
         shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
       when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+
+  handlers:
+    - name: R1SOFT-INSTALLED_ON_CENTOS_6
+      systemd:
+         name: sbm-agent
+         state: restarted
+    
 
       # this line is for centos 8
     - block:
@@ -57,15 +63,18 @@
         package:
           name: serverbackup-enterprise-agent 
           state: latest
+        notify: R1SOFT-INSTALLED_ON_CENTOS_8
       
-      - name: Start agent
-        systemd:
-          name: sbm-agent
-          state: restarted
     
       - name: Get key
         shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
       when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "8"
+  
+  handlers:
+    - name: R1SOFT-INSTALLED_ON_CENTOS_8
+      systemd:
+         name: sbm-agent
+         state: restarted
 
        # this line is for centos Fedora
     - block:
@@ -78,12 +87,15 @@
         package:
           name: serverbackup-enterprise-agent 
           state: latest
+        notify: R1SOFT-INSTALLED_ON_FEDORA_28
       
-      - name: Start agent
-        systemd:
-          name: sbm-agent
-          state: restarted
     
       - name: Get key
         shell: "r1soft-setup --get-key http://r1soft.acirrustech.com"
       when: ansible_distribution == "Fedora" and ansible_distribution_major_version == "28"
+  
+  handlers:
+    - name: R1SOFT-INSTALLED_ON_FEDORA_28
+      systemd:
+         name: sbm-agent
+         state: restarted
