--- a/filebeat.yaml
+++ b/filebeat.yaml
@@ -11,6 +11,7 @@
         shell: "rpm -vi filebeat-7.1.1-x86_64.rpm"
         notify: FILEBEAT_CENTOS_6 
       when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+      ignore_errors: true
       
 
 
@@ -20,7 +21,8 @@
       - name: Install from rpm
         shell: "rpm -vi filebeat-7.1.1-x86_64.rpm"
         notify: FILEBEAT_CENTOS_7
-      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7" 
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7"
+      ignore_errors: true 
       
 
 
