--- a/centos7.yaml
+++ b/centos7.yaml
@@ -4,7 +4,7 @@
   tasks:
     - name: Creates Centos7 instance
       ec2:
-        key_name: terraform      
+        key_name: ASIBLE_KEY-DONT-DELETE     
         instance_type: t2.micro
         image: ami-0ff760d16d9497662
         count: 2
