--- a/administration/download.yaml
+++ b/administration/download.yaml
@@ -1,10 +1,17 @@
 ---
 - name: Helps to download file
+  vars_prompt:
+    - name: URL
+      prompt: "Give me the url: "
+      private: no
+    - name: DESTINATION
+      prompt: "Give me the location to put: "
+      private: no
   hosts: all
   become: yes
   become_method: sudo
   tasks:
     - name: Download 1 package
       get_url:
-        url: ""
-        dest: /tmp/
+        url: "{{URL}}"
+        dest: "{{DESTINATION}}"
