--- a/bootstrap/provisioning.yaml
+++ b/bootstrap/provisioning.yaml
@@ -4,16 +4,15 @@
   become: yes
   become_user: root
   tasks:
-
-- name: Ping
-  ping:
+    - name: Ping
+      ping:
 
 
 - name: Install r1soft
-- import_playbook: r1soft_agent.yaml
+  import_playbook: r1soft_agent.yaml
 
-- name: Nagiosxi
-- import_playbook: nagios_agent.yaml
-
+- name: Nagiosxi 
+  import_playbook: nagiosxi_agent.yaml
+  
 - name: Install filebeat
-- import_playbook: filebeat.yaml
+  import_playbook: filebeat.yaml
