scope: system added

--- a/agents/r1soft-server.yaml
+++ b/agents/r1soft-server.yaml
@@ -19,7 +19,7 @@
 
         - name: start agent
           systemd: 
-            scope: user
+            scope: system
             name: sbm-agent
             state: restarted
 
