--- a/agents/r1soft-server.yaml
+++ b/agents/r1soft-server.yaml
@@ -12,49 +12,56 @@
              dest: /etc/yum.repos.d/r1soft.repo
 
         - name: Install r1soft agent
+          when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7'
           package: 
             name: serverbackup-enterprise-agent 
             state: latest 
-          notify: R1SOFT_INSTALLED_ON_CENTOS7
+          
 
         - name: start agent
+          when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7'        
           systemd: 
-            scope: global
             name: sbm-agent
             state: restarted
 
         - name: Get key
           shell: "r1soft-setup --get-key http://34.74.152.140"
-        when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7"
-
+          when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7'
+          notify: R1SOFT_INSTALLED_ON_CENTOS_7
 
 # This line is for CentOS 6
 
-      - block:
+      
         - name: Create Repository
+          when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
           copy: 
-             src: r1soft.repo
-             dest: /etc/yum.repos.d/r1soft.repo
+            src: r1soft.repo
+            dest: /etc/yum.repos.d/r1soft.repo
+
         - name: Install r1soft agent
+          when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
           package: 
             name: serverbackup-enterprise-agent 
             state: latest 
-          notify: R1SOFT_INSTALLED_ON_CENTOS_6 
+          
 
         - name: start agent
+          when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
           service:
             name: cdp-agent
             state: restarted
         
         - name: Get key
           shell: "r1soft-setup --get-key http://34.74.152.140"
-        when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+          when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
+          notify: R1SOFT_INSTALLED_ON_CENTOS_6 
 
     handlers: 
       - name: R1SOFT_INSTALLED_ON_CENTOS_6
         service:
           name: cdp-agent
           state: restarted
+          
       - name: R1SOFT_INSTALLED_ON_CENTOS_7
         systemd:
           name: sbm-agent
