--- a/IAAC/aws/s3_bucket.yaml
+++ b/IAAC/aws/s3_bucket.yaml
@@ -2,7 +2,7 @@
 - name: creates and deletes s3 bucket
   hosts: localhost
   tasks:
-    - name: S3 management\n
+    - name: S3 management
       aws_s3:
         bucket: "{{bucket}}"
         mode: "{{mode}}"
