--- a/IAAC/aws/s3_bucket.yaml
+++ b/IAAC/aws/s3_bucket.yaml
@@ -1,8 +1,8 @@
 ---
-- name: creates and deletes s3 bucket
+- name: creates and deletes s3 buckets
   hosts: localhost
   tasks:
-    - name: S3 management
+    - name: S3 Management
       aws_s3:
         bucket: "{{bucket}}"
         mode: "{{mode}}"
