added to stoped

--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -4,17 +4,17 @@
   package: 
     name: "{{item}}"
     state: latest
-    with_items:
-        - wget
-        - unzip
-        - php-gd
-        - httpd
-        - mysql
-        - mariadb-server
-        - php 
-        - php-mysql
-        - php-fpm
-    ignore_errors: true
+  with_items:
+    - wget
+    - unzip
+    - php-gd
+    - httpd
+    - mysql
+    - mariadb-server
+    - php 
+    - php-mysql
+    - php-fpm
+  ignore_errors: true
 
 - name: Download wordpress package
   get_url:
@@ -29,16 +29,16 @@
       become: yes
       become_method: sudo
 
-    - name: Move files to html folder
-      shell: "mv /var/www/html/wordpress/*  /var/www/html/"
-      become: yes
-      become_method: sudo
-      ignore_errors: yes
+- name: Move files to html folder
+  shell: "mv /var/www/html/wordpress/*  /var/www/html/"
+    become: yes
+    become_method: sudo
+    ignore_errors: yes
       
-    - name: Restart httpd 
-      systemd:
-        name: httpd
-        state: started
-        enabled: yes
+- name: Restart httpd 
+  systemd:
+    name: httpd
+    state: stoped
+    enabled: no
       become: yes
       become_method: sudo
