--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Install necessary packages
   package: 
     name: "{{item}}"
-    state: latest
+    state: present
   with_items:
     - wget
     - unzip
@@ -11,7 +11,7 @@
     - httpd
     - mysql
     - mariadb-server
-    - php 
+    - php
     - php-mysql
     - php-fpm
   ignore_errors: true
@@ -26,19 +26,19 @@
     src: "/tmp/wordpress-5.2.1.tar.gz"
     dest: /var/www/html/
     remote_src: yes
-      become: yes
-      become_method: sudo
+    become: yes
+    become_method: sudo
 
 - name: Move files to html folder
   shell: "mv /var/www/html/wordpress/*  /var/www/html/"
-    become: yes
-    become_method: sudo
-    ignore_errors: yes
+  become: yes
+  become_method: sudo
+  ignore_errors: yes
       
 - name: Restart httpd 
   systemd:
     name: httpd
-    state: stoped
-    enabled: no
-      become: yes
-      become_method: sudo
+    state: stopped
+    enabled: yes
+  become: yes
+  become_method: sudo
