--- a/roles/r1soft/tasks/main.yml
+++ b/roles/r1soft/tasks/main.yml
@@ -10,6 +10,7 @@
     package:
       name: serverbackup-enterprise-agent 
       state: present
+    notify: R1SOFT_INSTALLED_ON_CENTOS_7
       
     
     
