--- a/bootstrap/docker/docker_deploy.yaml
+++ b/bootstrap/docker/docker_deploy.yaml
@@ -10,4 +10,4 @@
         count: "{{count}}"
         vpc_subnet_id: "{{vpc_subnet_id}}"
         region: "{{region}}"
-        user_data: "{{ lookup('file', 'docker_deploy.sh', 'userdata.sh') }}"
+        user_data: "{{ lookup('file', 'docker_deploy.sh') }}"
